--- a/terrasalon/assets/css/services-css.css
+++ b/terrasalon/assets/css/services-css.css
@@ -200,7 +200,7 @@ p {
 }
 
 @media (min-width: 768px) {
-    #serviceBoxes{position: relative; top: 15%; transform: translateY(-15%);}
+    #serviceBoxes{position: relative; padding-top: 5%;}
 }
 
 /*Cellphone Specific*/
