Change zach's profile

--- a/subdirec/chi_sigma/css/pages.css
+++ b/subdirec/chi_sigma/css/pages.css
@@ -177,8 +177,9 @@ footer {
     background-position-y: 0px;
 }
 .zach {
-    background-image: url("../img/profiles/lowen-z.jpg");
+    background-image: url("../img/profiles/lowen-z2.jpg");
     background-position: center;
+    background-size: 85%;
 }
 .rag {
     background-image: url("../img/profiles/narayan-r.jpg")  ;
